trunk/Archive/d36532fcb5c7b8223c6d816103a61f80-c96156d6cc95286981b0e9deef2eefae/output
+ g++ -std=c++1y -O3 -pthread main.cpp
main.cpp:1:26: error: ‘elem_t’ was not declared in this scope
 int neighbour_in_plane ( elem_t l[LATTICE_SIZE][LATTICE_SIZE], int j, int k )
                          ^
main.cpp:1:64: error: expected primary-expression before ‘int’
 int neighbour_in_plane ( elem_t l[LATTICE_SIZE][LATTICE_SIZE], int j, int k )
                                                                ^
main.cpp:1:71: error: expected primary-expression before ‘int’
 int neighbour_in_plane ( elem_t l[LATTICE_SIZE][LATTICE_SIZE], int j, int k )
                                                                       ^
main.cpp:1:77: error: expression list treated as compound expression in initializer [-fpermissive]
 int neighbour_in_plane ( elem_t l[LATTICE_SIZE][LATTICE_SIZE], int j, int k )
                                                                             ^
main.cpp:2:1: error: expected ‘,’ or ‘;’ before ‘{’ token
 {
 ^
